2002-06-03  Heikki Junes  <heikki.junes@hut.fi>

	* lilypond-mode.el: Extend "Quick notes" containing note tuples.

	* lilypond-font-lock.el: Add fixes and comments to syntax-table.

2002-06-03  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam-engraver.cc (class Grace_beam_engraver): derive from
	beam-engraver: use different engraver so we can mix normal and
	grace beams.

2002-06-01  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc (shift_region_to_valid): Try to shift positions
	after slope-damping and concaveness check, so that short-stems are
	not violated.

2002-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (quanting): Increase REGION_SIZE to 4 by default.
	While we'd rather not pay the performance penalty, we certainly
	don't want silly bugs.  This should be looked into.

2002-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix for ash as /bin/sh.

2002-05-31  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/musedata2ly.py (Parser.parse_note_line): add dots. Add
	notice that missing features are exercise for user.

2002-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (score_stem_lengths): Bugfix for knees: use correct
	(but alas, not partly precomputed) value for current_y when
	calculating stem length demerits.
	(calc_stem_y): Temporary precomputed factors fix.

	* lily/stem.cc (calc_stem_info): Take multiplicity into account
	for shortest_y too.

	* input/bugs/melisma-tie-rest.ly: New file.

2002-05-30  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem.cc (calc_stem_info): remove min_y member, rename
	stuff. 	Remove kneeing stuff.

	* lily/beam.cc (brew_molecule): remove beam direction. Lots of
	twiddling

2002-05-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sketch.scm: 
	* scm/ps.scm: 
	* scm/pdftex.scm: 
	* scm/pdf.scm: 
	* scm/tex.scm: Add check for Guile-1.4.1.  Guile includes
	patch-level of version in minor-version string.  Arg.

2002-05-29  Han-Wen  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (TabStaffContext): 