@@ -2,7 +2,7 @@
 
 %{
 
-A sample tablature.
+A sample tablature, with both normal staff and tab.
 
 Tablature is done by overriding the note-head formatting function, and
 putting it on a 6-line staff. A special engraver takes care of going
@@ -10,7 +10,18 @@ from string-number + pitch to number.
 
 %}
 
+partition = \notes { ces'16^2 d'^2 e'8^2 g'2.^3  \times 2/3 { c'8^2 e'8^3 d'8^3 } e'4^2 }
+
 \score {
-  \notes  \context TabStaff { ces'16-2 d'-2 e'8-2 g'2.-3  c'4-1 c''8-5 b'-5 }
-  
- }
+  \context StaffGroup <
+    \context Staff <
+      % Hide fingering number (used for string number) for the "normal" staff
+      \property Staff.Fingering \override #'transparent = ##t
+      
+      \partition
+    >
+    \context TabStaff <
+      \partition
+    >
+  >
+}
