@@ -1,3 +1,7 @@
+2002-06-04  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
+
+	* scripts/ly2dvi.py (non_path_environment): Fix typo
+
 2002-06-03  Heikki Junes  <heikki.junes@hut.fi>
 
 	* lilypond-mode.el: Extend "Quick notes" containing note tuples.
